--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<script src="C:\Users\joelc\Documents\saveformvalues.js" language="javascript1.2" type="text/javascript"></script>
-<script src="C:\Users\joelc\Documents\cookie.js" language="javascript1.2" type="text/javascript"></script>
+<script src="...\saveformvalues.js" language="javascript1.2" type="text/javascript"></script>
+<script src="...\cookie.js" language="javascript1.2" type="text/javascript"></script>
 
 </head>
 
