--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<script src="...\saveformvalues.js" language="javascript1.2" type="text/javascript"></script>
-<script src="...\cookie.js" language="javascript1.2" type="text/javascript"></script>
+<script src="https://j-cropsey.github.io/j-cropsey.github.io/saveformvalues.js" language="javascript1.2" type="text/javascript"></script>
+<script src="https://j-cropsey.github.io/j-cropsey.github.io/cookie.js" language="javascript1.2" type="text/javascript"></script>
 
 </head>
 
