--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-<center><img src="!(https://user-images.githubusercontent.com/85181898/120819726-7738d680-c519-11eb-8d38-ee59f3d1b7c2.png)" alt="header" style="width:94%;"></center>
+<center><img src="https://user-images.githubusercontent.com/85181898/120819726-7738d680-c519-11eb-8d38-ee59f3d1b7c2.png" alt="header" style="width:94%;"></center>
 
 <div style="margin:1% 2% 1% 2%">
 
