--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 <div style="float:left"> Components Screen: </div>
 <div style="margin-left: 37%"> 
 <input type="checkbox" id="presenthsv9" name="presenthsv9" value="presenthsv9">
-<label for="Present"> presenthsv9</label>&nbsp&nbsp</div>
+<label for="presenthsv9"> Present</label>&nbsp&nbsp</div>
 
 <div style="float:left"> Individual Component Screen: </div>
 <div style="margin-left: 37%"> 
