--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-<center><img src="C:\Users\joelc\Pictures\header.png" alt="header" style="width:94%;"></center>
+<center><img src="https://user-images.githubusercontent.com/85181898/120836394-2336ed80-c52b-11eb-9bac-33c59cea5fb8.png" alt="header" style="width:94%;"></center>
 
 <div style="margin:1% 2% 1% 2%">
 
