--- a/index.html
+++ b/index.html
@@ -1152,14 +1152,14 @@
 
 
 <div id="component"> Component </div>
-<div id="serialnumber"> Serial Number </div>
+<div id="serialnumbers"> Serial Number </div>
 <div id="datecode"> Date Code </div>
 <div id="photoyesno"> Photo </div>
 
 
 <style>
 #component{display:inline-block;margin-left:2.5%; width:5%; font-weight: normal; text-decoration: underline;}
-#serialnumber{display:inline-block;margin-left:33%; width:17.5%;text-decoration: underline;}
+#serialnumbers{display:inline-block;margin-left:33%; width:17.5%;text-decoration: underline;}
 #datecode{display:inline-block; width:14%;text-decoration: underline;}
 #photoyesno{display:inline-block; width:8%;text-decoration: underline;}
 </style>
