--- a/index.html
+++ b/index.html
@@ -1552,7 +1552,10 @@ p {
  font-size: 100%
 }
 
-
+textarea {
+ resize: vertical;
+ }
+ 
 .btn-file-upload{
      width: 100%;
      position:relative;
