--- a/index.html
+++ b/index.html
@@ -1464,54 +1464,63 @@ function img_pathUrlh(input){
   background: #ddd;
   width:24%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urla {
   background: #ddd;
   width:24%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urlb {
   background: #ddd;
   width:24%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urlc {
   background: #ddd;
   width:24%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urld {
   background: #ddd;
   width:19%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urle {
   background: #ddd;
   width:19%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urlf {
   background: #ddd;
   width:19%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urlg {
   background: #ddd;
   width:19%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 #img_urlh {
   background: #ddd;
   width:19%;
   height: ;
+   border-radius:2px;
   display: inline;
 }
 </style>
