--- a/index.html
+++ b/index.html
@@ -1392,11 +1392,11 @@
 
 
 
-<p><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></p>
-<p><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></p>
-<p><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></p>
-<p><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></p>
-<p><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></p>
+ <p><center><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></center></p>
+ <p><center><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></center></p>
+ <p><center><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></center></p>
+ <p><center><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></center></p>
+ <p><center><textarea id="defects1" name="defects1" rows="2" columns=""></textarea></center></p>
 
 <center><img src="" id="img_urld" alt="">&nbsp
 <img src="" id="img_urle" >&nbsp
@@ -1528,7 +1528,7 @@ function img_pathUrlh(input){
 <style>
 textarea
 {
-width:100%;
+width:97%;
 }
 </style>
 
