--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <input type="checkbox" id="aluminum" name="aluminum" value="aluminum">
 <label for="aluminum"> Aluminum</label>&nbsp&nbsp
 <input type="checkbox" id="galvanized" name="galvanized" value="galvanized">
-<label for="galvanized"> galvanized</label>
+<label for="galvanized"> Galvanized</label>
 <input type="checkbox" id="stainlesssteel" name="stainlesssteel" value="stainlesssteel">
 <label for="stainlesssteel"> Stainless Steel</label></div>
 
@@ -103,9 +103,8 @@
 <label for="customervfd"> Customer VFD</label></div>
 
 <div style="float:left"> Discharge Auger Length</div> 
-<div style="margin-left: 37%">
-&nbsp <input type ="text" id="dischargeaugerlength" name="dischargeaugerlength" size="8%" placeholder="feet">
-<div style="float:left"> Drag Conveyor </div> 
+<div style="margin-left: 37%"> Drag Conveyor
+<input type ="text" id="dischargeaugerlength" name="dischargeaugerlength" size="8%" placeholder="feet">
 <input type="checkbox" id="yesdbc1" name="yesdbc1" value="yesdbc1">
 <label for="yesdbc1"> Yes</label>&nbsp&nbsp
 <input type="checkbox" id="nodbc1" name="nodbc1" value="nodbc1">
