--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
 </center>
 
 <input type="reset" name="g">
-<input type="button" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 604800);">
+<input type="button" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
 <input type="button" value="Recover" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
 
 
