--- a/index.html
+++ b/index.html
@@ -1426,9 +1426,9 @@
 <center><input type="file" id="flup" onchange="getfolder(event)" webkitdirectory mozdirectory msdirectory odirectory directory multiple /
 </center>
 
-<input type="reset" name="g">
-<input type="button" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
-<input type="button" value="Recover" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
+<input type="reset" class="button button1" style="width:33%" name="g">
+<input type="button" class="button button1" style="width:33%" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
+<input type="button" class="button button1" style="width:33%" value="Recover" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
 
 
 </div>
@@ -1589,6 +1589,22 @@ resize: vertical;
     font-size: 12px;
     line-height: 2;
  }
+.button{
+  background-color: rgba(21,84,131,1);
+  border-color: rgba(21,84,131,1);
+  border-radius: 2px;
+  color: white;
+  padding: 0.33% 0.33%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  border: 0px;
+
+}
+
+.button1 {border-radius: 2px;}
+	
 </style>
 
 
