--- a/index.html
+++ b/index.html
@@ -1428,9 +1428,11 @@
 </center>
 -->
 <hr>
+	<center>
 <input type="reset" class="button button1" style="width:32%" name="g">
 <input type="button" class="button button1" style="width:32%" value="Save" onclick="setCookie('formdata',getFormString(this.form,true), 1209600);">
 <input type="button" class="button button1" style="width:32%" value="Recover" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
+	</center>
 <hr>
 
 </div>
