--- a/index.html
+++ b/index.html
@@ -1609,7 +1609,11 @@ resize: vertical;
 
 .button1 {border-radius: 2px;}
 	
-.submit { -webkit-appearance: none; }
+input {
+-webkit-appearance: none;
+-moz-appearance: none;
+appearance: none;
+}
 	
 </style>
 
