--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,8 @@ resize: vertical;
 .button1 {border-radius: 2px;}
 	
 input {
--webkit-appearance: none;
+-moz-appearance: none;
+appearance: none;
 
 }
 	
