--- a/index.html
+++ b/index.html
@@ -898,7 +898,9 @@
  
 <div style="float:left"> Fan Amperage</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="daa" name="fa" value="" size="13%" placeholder="Amps">
+<input type="text" id="daa" name="fa" value="" size="5%" placeholder="Amps">
+<input type="text" id="daa2" name="fa2" value="" size="5%" placeholder="Amps">
+<input type="text" id="daa3" name="fa3" value="" size="5%" placeholder="Amps">
 <label for="fa"> </label></div>
 
 <div style="float:left"> Fan Smooth and Quiet: </div>
