--- a/index.html
+++ b/index.html
@@ -1151,18 +1151,18 @@
 <div style="margin-left: 42%"><u>Date Code</u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<u>Serial Number</u></div>
 -->
 
-
-<div id="component"> Component </div>
 <div id="serialnumbers"> Serial Number </div>
 <div id="datecode"> Date Code </div>
 <div id="photoyesno"> Photo </div>
 
 
 <style>
-#component{display:inline-block;margin-left:2.5%; width:10%; font-weight: normal; text-decoration: underline;}
-#serialnumbers{display:inline-block;margin-left:29%; width:17%;text-decoration: underline;}
-#datecode{display:inline-block;  width:9.5%;text-decoration: underline;}
-#photoyesno{display:inline-block;  width:10%;text-decoration: underline;}
+<style>
+#serialnumbers{display:inline-block;margin-left:42%; width:16.4%;text-decoration: underline;}
+#datecode{display:inline-block;  width:9.75%;text-decoration: underline;}
+#photoyesno{display:inline-block;  width:0%;text-decoration: underline;}
+</style>
+<br>
 </style>
 <br>
 
