--- a/index.html
+++ b/index.html
@@ -1156,14 +1156,13 @@
 <div id="photoyesno"> Photo </div>
 
 
-<style>
+
 <style>
 #serialnumbers{display:inline-block;margin-left:42%; width:16.4%;text-decoration: underline;}
-#datecode{display:inline-block;  width:9.75%;text-decoration: underline;}
-#photoyesno{display:inline-block;  width:0%;text-decoration: underline;}
+#datecode{display:inline-block;margin-left: 58%;  width:9.75%;text-decoration: underline;}
+#photoyesno{display:inline-block; margin-left:65%; width:0%;text-decoration: underline;}
 </style>
-<br>
-</style>
+
 <br>
 
  
