--- a/index.html
+++ b/index.html
@@ -898,10 +898,10 @@
  
 <div style="float:left"> Fan Amperage</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="daa" name="fa" value="" size="5%" placeholder="Amps">
-<input type="text" id="daa2" name="fa2" value="" size="5%" placeholder="Amps">
-<input type="text" id="daa3" name="fa3" value="" size="5%" placeholder="Amps">
-<label for="fa"> </label></div>
+<input type="text" id="daam1" name="faam1" value="" size="5%" placeholder="Amps">
+<input type="text" id="daam2" name="faam2" value="" size="5%" placeholder="Amps">
+<input type="text" id="daam3" name="faam3" value="" size="5%" placeholder="Amps">
+<label for="faam1"> </label></div>
 
 <div style="float:left"> Fan Smooth and Quiet: </div>
 <div style="margin-left: 37%"> 
@@ -1159,8 +1159,8 @@
 
 <style>
 #serialnumbers{display:inline-block;margin-left:42%; width:16.4%;text-decoration: underline;}
-#datecode{display:inline-block;margin-left: 58%;  width:9.75%;text-decoration: underline;}
-#photoyesno{display:inline-block; margin-left:65%; width:0%;text-decoration: underline;}
+#datecode{display:inline-block; width:9.75%;text-decoration: underline;}
+#photoyesno{display:inline-block; width:0%;text-decoration: underline;}
 </style>
 
 <br>
