--- a/index.html
+++ b/index.html
@@ -1158,9 +1158,9 @@
 
 
 <style>
-#serialnumbers{display:inline-block;margin-left:42%; width:16.4%;text-decoration: underline;}
-#datecode{display:inline-block; width:9.75%;text-decoration: underline;}
-#photoyesno{display:inline-block; width:0%;text-decoration: underline;}
+#serialnumbers{display:inline-block;margin-left:42%; text-align:center; width:16.4%;text-decoration: underline;}
+#datecode{display:inline-block; text-align: center; width:9.75%;text-decoration: underline;}
+#photoyesno{display:inline-block; text-align: center; width:10%;text-decoration: underline;}
 </style>
 
 <br>
