--- a/index.html
+++ b/index.html
@@ -1151,16 +1151,16 @@
 <div style="margin-left: 42%"><u>Date Code</u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<u>Serial Number</u></div>
 -->
 
-<div id="serialnumbers"> Serial Number </div>&nbsp&nbsp
-<div id="datecode"> Date Code </div>&nbsp
+<div id="serialnumbers"> Serial Number </div>
+<div id="datecode"> Date Code </div>
 <div id="photoyesno"> Photo </div>
 
 
 
 <style>
-#serialnumbers{display:inline-block;margin-left:37%; text-align:center; width:17%;text-decoration: underline;}
-#datecode{display:inline-block; text-align: center; width:10%;text-decoration: underline;}
-#photoyesno{display:inline-block; text-align: center; width:4%;text-decoration: underline;}
+#serialnumbers{display:inline-block;margin-left:37%; text-align:center; width:22%;text-decoration: underline;}
+#datecode{display:inline-block; text-align: center; width:14%;text-decoration: underline;}
+#photoyesno{display:inline-block; text-align: center; width:0%;text-decoration: underline;}
 </style>
 
 <br>
