--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
 
 <style>
 #serialnumbers{display:inline-block;margin-left:37%; text-align:center; width:22%;text-decoration: underline;}
-#datecode{display:inline-block; text-align: center; width:14%;text-decoration: underline;}
+#datecode{display:inline-block; text-align: center; width:15%;text-decoration: underline;}
 #photoyesno{display:inline-block; text-align: center; width:0%;text-decoration: underline;}
 </style>
 
@@ -1170,7 +1170,7 @@
 <div style="float:left"> &nbsp Infeed Rotary Switch</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="IRSDC" name="IRSDC" value="" size="22%">
-<label for="IRSDC"> </label>&nbsp&nbsp
+<label for="IRSDC"> </label>&nbsp
 <input type="text" id="IRSSN" name="IRSSN" value="" size="14%">
 <label for="IRSSN"> </label>&nbsp
 <input type="checkbox" id=pic1" name="pic1" value="pic1"></div>
@@ -1179,7 +1179,7 @@
 <div style="float:left">&nbsp Infeed Sensor</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="ISDC" name="ISDC" value="" size="22%">
-<label for="ISDC"> </label>&nbsp&nbsp
+<label for="ISDC"> </label>&nbsp
 <input type="text" id="ISSN" name="ISSN" value="" size="14%">
 <label for="ISSN"> </label>&nbsp
 <input type="checkbox" id=pic2" name="pic2" value="pic2"></div>
@@ -1187,7 +1187,7 @@
 <div style="float:left">&nbsp Discharge Sensor</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="DSDC" name="DSDC" value="" size="22%">
-<label for="DSDC"> </label>&nbsp&nbsp
+<label for="DSDC"> </label>&nbsp
 <input type="text" id="DSSN" name="DSSN" value="" size="14%">
 <label for="DSSN"> </label>&nbsp
 <input type="checkbox" id=pic3" name="pic3" value="pic3"></div>
@@ -1195,7 +1195,7 @@
 <div style="float:left">&nbsp DM Board</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="DMBDC" name="DMBDC" value="" size="22%">
-<label for="DMBDC"> </label>&nbsp&nbsp
+<label for="DMBDC"> </label>&nbsp
 <input type="text" id="DMBSN" name="DMBSN" value="" size="14%">
 <label for="DMBSN"> </label>&nbsp
 <input type="checkbox" id=pic4" name="pic4" value="pic4"></div>
@@ -1203,7 +1203,7 @@
 <div style="float:left">&nbsp HMI #1</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="HMI1DC" name="HMI1DC" value="" size="22%">
-<label for="HMI1DC"> </label>&nbsp&nbsp
+<label for="HMI1DC"> </label>&nbsp
 <input type="text" id="HMI1SN" name="HMI1SN" value="" size="14%">
 <label for="HMI1SN"> </label>&nbsp
 <input type="checkbox" id=pic5" name="pic5" value="pic5"></div>
@@ -1211,7 +1211,7 @@
  <div style="float:left">&nbsp HMI #2</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="HMI2DC" name="HMI2DC" value="" size="22%">
-<label for="HMI2DC"> </label>&nbsp&nbsp
+<label for="HMI2DC"> </label>&nbsp
 <input type="text" id="HMI2SN" name="HMI2SN" value="" size="14%">
 <label for="HMI2SN"> </label>&nbsp
 <input type="checkbox" id=pic6" name="pic6" value="pic6"></div>
@@ -1219,7 +1219,7 @@
 <div style="float:left">&nbsp DC Power Supply</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="DCPSDC" name="DCPSDC" value="" size="22%">
-<label for="DCPSDC"> </label>&nbsp&nbsp
+<label for="DCPSDC"> </label>&nbsp
 <input type="text" id="DCPSSN" name="DCPSSN" value="" size="14%">
 <label for="DCPSSN"> </label>&nbsp
 <input type="checkbox" id=pic7" name="pic7" value="pic7"></div>
@@ -1227,7 +1227,7 @@
 <div style="float:left">&nbsp VFD</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="VFDDC" name="VFDDC" value="" size="22%">
-<label for="VFDDC"> </label>&nbsp&nbsp
+<label for="VFDDC"> </label>&nbsp
 <input type="text" id="VFDSN" name="VFDSN" value="" size="14%">
 <label for="VFDSN"> </label>&nbsp
 <input type="checkbox" id=pic8" name="pic8" value="pic8"></div>
@@ -1235,7 +1235,7 @@
 <div style="float:left">&nbsp FILL Motor</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="FMDC" name="FMDC" value="" size="22%">
-<label for="FMDC"> </label>&nbsp&nbsp
+<label for="FMDC"> </label>&nbsp
 <input type="text" id="FMSN" name="FMSN" value="" size="14%">
 <label for="FMSN"> </label>&nbsp
 <input type="checkbox" id=pic9" name="pic9" value="pic9"></div>
@@ -1243,7 +1243,7 @@
 <div style="float:left">&nbsp Discharge Motor</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="DMDC" name="DMDC" value="" size="22%">
-<label for="DMDC"> </label>&nbsp&nbsp
+<label for="DMDC"> </label>&nbsp
 <input type="text" id="DMSN" name="DMSN" value="" size="14%">
 <label for="DMSN"> </label>&nbsp
 <input type="checkbox" id=pic10" name="pic10" value="pic10"></div>
@@ -1251,7 +1251,7 @@
 <div style="float:left">&nbsp Discharge Gearbox</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="DGDC" name="DGDC" value="" size="22%">
-<label for="DGDC"> </label>&nbsp&nbsp
+<label for="DGDC"> </label>&nbsp
 <input type="text" id="DGSN" name="DGSN" value="" size="14%">
 <label for="DGSN"> </label>&nbsp
 <input type="checkbox" id=pic11" name="pic11" value="pic11"></div>
@@ -1259,7 +1259,7 @@
 <div style="float:left">&nbsp Metering Gearbox</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="MGDC" name="MGDC" value="" size="22%">
-<label for="MGDC"> </label>&nbsp&nbsp
+<label for="MGDC"> </label>&nbsp
 <input type="text" id="MGSN" name="MGSN" value="" size="14%">
 <label for="MGSN"> </label>&nbsp
 <input type="checkbox" id=pic12" name="pic12" value="pic12"></div>
@@ -1267,7 +1267,7 @@
 <div style="float:left">&nbsp Metering Motor</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="MMDC" name="MMDC" value="" size="22%">
-<label for="MMDC"> </label>&nbsp&nbsp
+<label for="MMDC"> </label>&nbsp
 <input type="text" id="MMSN" name="MMSN" value="" size="14%">
 <label for="MMSN"> </label>&nbsp
 <input type="checkbox" id=pic13" name="pic13" value="pic13"></div>
@@ -1275,7 +1275,7 @@
 <div style="float:left">&nbsp Sampler Motor</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="SMDC" name="SMDC" value="" size="22%">
-<label for="SMDC"> </label>&nbsp&nbsp
+<label for="SMDC"> </label>&nbsp
 <input type="text" id="SMSN" name="SMSN" value="" size="14%">
 <label for="SMSN"> </label>&nbsp
 <input type="checkbox" id=pic14" name="pic14" value="pic14"></div>
@@ -1283,7 +1283,7 @@
 <div style="float:left">&nbsp Sampler Gearbox</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="SGDC" name="SGDC" value="" size="22%">
-<label for="SGDC"> </label>&nbsp&nbsp
+<label for="SGDC"> </label>&nbsp
 <input type="text" id="SGSN" name="SGSN" value="" size="14%">
 <label for="SGSN"> </label>&nbsp
 <input type="checkbox" id=pic15" name="pic15" value="pic15"></div>
@@ -1291,7 +1291,7 @@
 <div style="float:left">&nbsp Fan #1 Motor</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="IRSDC" name="IRSDC" value="" size="22%">
-<label for="IRSDC"> </label>&nbsp&nbsp
+<label for="IRSDC"> </label>&nbsp
 <input type="text" id="IRSSN" name="IRSSN" value="" size="14%">
 <label for="IRSSN"> </label>&nbsp
 <input type="checkbox" id=pic16" name="pic16" value="pic16"></div>
@@ -1307,7 +1307,7 @@
 <div style="float:left">&nbsp Actuator #2</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="A2DC" name="A2DC" value="" size="22%">
-<label for="A2DC"> </label>&nbsp&nbsp
+<label for="A2DC"> </label>&nbsp
 <input type="text" id="A2SN" name="A2SN" value="" size="14%">
 <label for="A2SN"> </label>&nbsp
 <input type="checkbox" id=pic18" name="pic18" value="pic18"></div>
@@ -1315,7 +1315,7 @@
 <div style="float:left">&nbsp Modutrol Valve #1</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="MV1DC" name="MV1DC" value="" size="22%">
-<label for="MV1DC"> </label>&nbsp&nbsp
+<label for="MV1DC"> </label>&nbsp
 <input type="text" id="MV1SN" name="MV1SN" value="" size="14%">
 <label for="Mv1SN"> </label>&nbsp
 <input type="checkbox" id=pic19" name="pic19" value="pic19"></div>
@@ -1323,7 +1323,7 @@
 <div style="float:left">&nbsp Modutrol Valve #2</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="MV2DC" name="MV2DC" value="" size="22%">
-<label for="MV2DC"> </label>&nbsp&nbsp
+<label for="MV2DC"> </label>&nbsp
 <input type="text" id="MV2SN" name="MV2SN" value="" size="14%">
 <label for="Mv2SN"> </label>&nbsp
 <input type="checkbox" id=pic20" name="pic20" value="pic20"></div>
@@ -1331,7 +1331,7 @@
 <div style="float:left">&nbsp Regulator #1</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="R1DC" name="R1DC" value="" size="22%">
-<label for="R1DC"> </label>&nbsp&nbsp
+<label for="R1DC"> </label>&nbsp
 <input type="text" id="R1SN" name="R1SN" value="" size="14%">
 <label for="R1SN"> </label>&nbsp
 <input type="checkbox" id=pic21" name="pic21" value="pic21"></div>
@@ -1339,7 +1339,7 @@
 <div style="float:left">&nbsp Secondary Regulator #1</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="SR1DC" name="SR1DC" value="" size="22%">
-<label for="SR1DC"> </label>&nbsp&nbsp
+<label for="SR1DC"> </label>&nbsp
 <input type="text" id="SR1SN" name="SR1SN" value="" size="14%">
 <label for="SR1SN"> </label>&nbsp
 <input type="checkbox" id=pic22" name="pic22" value="pic22"></div>
@@ -1347,7 +1347,7 @@
 <div style="float:left">&nbsp Secondary Regulator #2</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="SR2DC" name="SR2DC" value="" size="22%">
-<label for="SR2DC"> </label>&nbsp&nbsp
+<label for="SR2DC"> </label>&nbsp
 <input type="text" id="SR2SN" name="SR2SN" value="" size="14%">
 <label for="SR2SN"> </label>&nbsp
 <input type="checkbox" id=pic23" name="pic23" value="pic23"></div>
@@ -1355,7 +1355,7 @@
 <div style="float:left">&nbsp Fenwall #1</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="F1DC" name="F1DC" value="" size="22%">
-<label for="F1DC"> </label>&nbsp&nbsp
+<label for="F1DC"> </label>&nbsp
 <input type="text" id="F1SN" name="F1SN" value="" size="14%">
 <label for="F1SN"> </label>&nbsp
 <input type="checkbox" id=pic24" name="pic24" value="pic24"></div>
@@ -1363,7 +1363,7 @@
 <div style="float:left">&nbsp Fenwall #2</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="F2DC" name="F2DC" value="" size="22%">
-<label for="F2DC"> </label>&nbsp&nbsp
+<label for="F2DC"> </label>&nbsp
 <input type="text" id="F2SN" name="F2SN" value="" size="14%">
 <label for="F2SN"> </label>&nbsp
 <input type="checkbox" id=pic25" name="pic25" value="pic25"></div>
