--- a/index.html
+++ b/index.html
@@ -1165,12 +1165,12 @@
 <br>
 <div style="float:left"> &nbsp Infeed Rotary Switch</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="IRSDC" name="IRSDC" value="" size="22%" placeholder="SN">
+<input type="text" id="IRSDC" name="IRSDC" value="" size="22%" placeholder="S/N">
 <label for="IRSDC"> </label>&nbsp
 <input type="text" id="IRSSN" name="IRSSN" value="" size="14%" placeholder="DC">
 <label for="IRSSN"> </label>&nbsp
-<input type="checkbox" id=pic1" name="pic1" value="pic1"></div>
-&nbsp Photo
+<input type="checkbox" id=pic1" name="pic1" value="pic1">&nbspPhoto</div>
+
 
  
 <div style="float:left">&nbsp Infeed Sensor</div>
