--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,7 @@
 <div style="float:left">&nbsp Actuator #1</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="A1DC" name="A1DC" value="" size="22%" placeholder="Serial Number">
-<label for="A1DC"> </label>&nbsp&nbsp
+<label for="A1DC"> </label>&nbsp
 <input type="text" id="A1SN" name="A1SN" value="" size="14%" placeholder="Date Code">
 <label for="A1SN"> </label>&nbsp
 <input type="checkbox" id=pic17" name="pic17" value="pic17"></div>
