--- a/index.html
+++ b/index.html
@@ -1175,195 +1175,195 @@
  
 <div style="float:left">&nbsp Infeed Sensor</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="ISDC" name="ISDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="ISDC" name="ISDC" value="" size="22%" placeholder="S/N">
 <label for="ISDC"> </label>&nbsp
-<input type="text" id="ISSN" name="ISSN" value="" size="14%"  placeholder="Date Code">
+<input type="text" id="ISSN" name="ISSN" value="" size="14%"  placeholder="DC">
 <label for="ISSN"> </label>&nbsp
-<input type="checkbox" id=pic2" name="pic2" value="pic2"></div>
+<input type="checkbox" id=pic2" name="pic2" value="pic2">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Discharge Sensor</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="DSDC" name="DSDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="DSDC" name="DSDC" value="" size="22%" placeholder="S/N">
 <label for="DSDC"> </label>&nbsp
-<input type="text" id="DSSN" name="DSSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="DSSN" name="DSSN" value="" size="14%" placeholder="DC">
 <label for="DSSN"> </label>&nbsp
-<input type="checkbox" id=pic3" name="pic3" value="pic3"></div>
+<input type="checkbox" id=pic3" name="pic3" value="pic3">&nbspPhoto</div>
  
 <div style="float:left">&nbsp DM Board</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="DMBDC" name="DMBDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="DMBDC" name="DMBDC" value="" size="22%" placeholder="S/N">
 <label for="DMBDC"> </label>&nbsp
-<input type="text" id="DMBSN" name="DMBSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="DMBSN" name="DMBSN" value="" size="14%" placeholder="DC">
 <label for="DMBSN"> </label>&nbsp
-<input type="checkbox" id=pic4" name="pic4" value="pic4"></div>
+<input type="checkbox" id=pic4" name="pic4" value="pic4">&nbspPhoto</div>
  
 <div style="float:left">&nbsp HMI #1</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="HMI1DC" name="HMI1DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="HMI1DC" name="HMI1DC" value="" size="22%" placeholder="S/N">
 <label for="HMI1DC"> </label>&nbsp
-<input type="text" id="HMI1SN" name="HMI1SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="HMI1SN" name="HMI1SN" value="" size="14%" placeholder="DC">
 <label for="HMI1SN"> </label>&nbsp
-<input type="checkbox" id=pic5" name="pic5" value="pic5"></div>
+<input type="checkbox" id=pic5" name="pic5" value="pic5">&nbspPhoto</div>
 
  <div style="float:left">&nbsp HMI #2</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="HMI2DC" name="HMI2DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="HMI2DC" name="HMI2DC" value="" size="22%" placeholder="S/N">
 <label for="HMI2DC"> </label>&nbsp
-<input type="text" id="HMI2SN" name="HMI2SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="HMI2SN" name="HMI2SN" value="" size="14%" placeholder="DC">
 <label for="HMI2SN"> </label>&nbsp
-<input type="checkbox" id=pic6" name="pic6" value="pic6"></div>
+<input type="checkbox" id=pic6" name="pic6" value="pic6">&nbspPhoto</div>
  
 <div style="float:left">&nbsp DC Power Supply</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="DCPSDC" name="DCPSDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="DCPSDC" name="DCPSDC" value="" size="22%" placeholder="S/N">
 <label for="DCPSDC"> </label>&nbsp
-<input type="text" id="DCPSSN" name="DCPSSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="DCPSSN" name="DCPSSN" value="" size="14%" placeholder="DC">
 <label for="DCPSSN"> </label>&nbsp
-<input type="checkbox" id=pic7" name="pic7" value="pic7"></div>
+<input type="checkbox" id=pic7" name="pic7" value="pic7">&nbspPhoto</div>
  
 <div style="float:left">&nbsp VFD</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="VFDDC" name="VFDDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="VFDDC" name="VFDDC" value="" size="22%" placeholder="S/N">
 <label for="VFDDC"> </label>&nbsp
-<input type="text" id="VFDSN" name="VFDSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="VFDSN" name="VFDSN" value="" size="14%" placeholder="DC">
 <label for="VFDSN"> </label>&nbsp
-<input type="checkbox" id=pic8" name="pic8" value="pic8"></div>
+<input type="checkbox" id=pic8" name="pic8" value="pic8">&nbspPhoto</div>
  
 <div style="float:left">&nbsp FILL Motor</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="FMDC" name="FMDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="FMDC" name="FMDC" value="" size="22%" placeholder="S/N">
 <label for="FMDC"> </label>&nbsp
-<input type="text" id="FMSN" name="FMSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="FMSN" name="FMSN" value="" size="14%" placeholder="DC">
 <label for="FMSN"> </label>&nbsp
-<input type="checkbox" id=pic9" name="pic9" value="pic9"></div>
+<input type="checkbox" id=pic9" name="pic9" value="pic9">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Discharge Motor</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="DMDC" name="DMDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="DMDC" name="DMDC" value="" size="22%" placeholder="S/N">
 <label for="DMDC"> </label>&nbsp
-<input type="text" id="DMSN" name="DMSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="DMSN" name="DMSN" value="" size="14%" placeholder="DC">
 <label for="DMSN"> </label>&nbsp
-<input type="checkbox" id=pic10" name="pic10" value="pic10"></div>
+<input type="checkbox" id=pic10" name="pic10" value="pic10">&nbsp</div>
  
 <div style="float:left">&nbsp Discharge Gearbox</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="DGDC" name="DGDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="DGDC" name="DGDC" value="" size="22%" placeholder="S/N">
 <label for="DGDC"> </label>&nbsp
-<input type="text" id="DGSN" name="DGSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="DGSN" name="DGSN" value="" size="14%" placeholder="DC">
 <label for="DGSN"> </label>&nbsp
-<input type="checkbox" id=pic11" name="pic11" value="pic11"></div>
+<input type="checkbox" id=pic11" name="pic11" value="pic11">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Metering Gearbox</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="MGDC" name="MGDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="MGDC" name="MGDC" value="" size="22%" placeholder="S/N">
 <label for="MGDC"> </label>&nbsp
-<input type="text" id="MGSN" name="MGSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="MGSN" name="MGSN" value="" size="14%" placeholder="DC">
 <label for="MGSN"> </label>&nbsp
-<input type="checkbox" id=pic12" name="pic12" value="pic12"></div>
+<input type="checkbox" id=pic12" name="pic12" value="pic12">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Metering Motor</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="MMDC" name="MMDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="MMDC" name="MMDC" value="" size="22%" placeholder="S/N">
 <label for="MMDC"> </label>&nbsp
-<input type="text" id="MMSN" name="MMSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="MMSN" name="MMSN" value="" size="14%" placeholder="DC">
 <label for="MMSN"> </label>&nbsp
-<input type="checkbox" id=pic13" name="pic13" value="pic13"></div>
+<input type="checkbox" id=pic13" name="pic13" value="pic13">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Sampler Motor</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="SMDC" name="SMDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="SMDC" name="SMDC" value="" size="22%" placeholder="S/N">
 <label for="SMDC"> </label>&nbsp
-<input type="text" id="SMSN" name="SMSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="SMSN" name="SMSN" value="" size="14%" placeholder="DC">
 <label for="SMSN"> </label>&nbsp
-<input type="checkbox" id=pic14" name="pic14" value="pic14"></div>
+<input type="checkbox" id=pic14" name="pic14" value="pic14">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Sampler Gearbox</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="SGDC" name="SGDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="SGDC" name="SGDC" value="" size="22%" placeholder="S/N">
 <label for="SGDC"> </label>&nbsp
-<input type="text" id="SGSN" name="SGSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="SGSN" name="SGSN" value="" size="14%" placeholder="DC">
 <label for="SGSN"> </label>&nbsp
-<input type="checkbox" id=pic15" name="pic15" value="pic15"></div>
+<input type="checkbox" id=pic15" name="pic15" value="pic15">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Fan #1 Motor</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="IRSDC" name="IRSDC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="IRSDC" name="IRSDC" value="" size="22%" placeholder="S/N">
 <label for="IRSDC"> </label>&nbsp
-<input type="text" id="IRSSN" name="IRSSN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="IRSSN" name="IRSSN" value="" size="14%" placeholder="DC">
 <label for="IRSSN"> </label>&nbsp
-<input type="checkbox" id=pic16" name="pic16" value="pic16"></div>
+<input type="checkbox" id=pic16" name="pic16" value="pic16">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Actuator #1</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="A1DC" name="A1DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="A1DC" name="A1DC" value="" size="22%" placeholder="S/N">
 <label for="A1DC"> </label>&nbsp
-<input type="text" id="A1SN" name="A1SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="A1SN" name="A1SN" value="" size="14%" placeholder="DC">
 <label for="A1SN"> </label>&nbsp
-<input type="checkbox" id=pic17" name="pic17" value="pic17"></div>
+<input type="checkbox" id=pic17" name="pic17" value="pic17">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Actuator #2</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="A2DC" name="A2DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="A2DC" name="A2DC" value="" size="22%" placeholder="S/N">
 <label for="A2DC"> </label>&nbsp
-<input type="text" id="A2SN" name="A2SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="A2SN" name="A2SN" value="" size="14%" placeholder="DC">
 <label for="A2SN"> </label>&nbsp
-<input type="checkbox" id=pic18" name="pic18" value="pic18"></div>
+<input type="checkbox" id=pic18" name="pic18" value="pic18">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Modutrol Valve #1</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="MV1DC" name="MV1DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="MV1DC" name="MV1DC" value="" size="22%" placeholder="S/N">
 <label for="MV1DC"> </label>&nbsp
-<input type="text" id="MV1SN" name="MV1SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="MV1SN" name="MV1SN" value="" size="14%" placeholder="DC">
 <label for="Mv1SN"> </label>&nbsp
-<input type="checkbox" id=pic19" name="pic19" value="pic19"></div>
+<input type="checkbox" id=pic19" name="pic19" value="pic19">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Modutrol Valve #2</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="MV2DC" name="MV2DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="MV2DC" name="MV2DC" value="" size="22%" placeholder="S/N">
 <label for="MV2DC"> </label>&nbsp
-<input type="text" id="MV2SN" name="MV2SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="MV2SN" name="MV2SN" value="" size="14%" placeholder="DC">
 <label for="Mv2SN"> </label>&nbsp
-<input type="checkbox" id=pic20" name="pic20" value="pic20"></div>
+<input type="checkbox" id=pic20" name="pic20" value="pic20">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Regulator #1</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="R1DC" name="R1DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="R1DC" name="R1DC" value="" size="22%" placeholder="S/N">
 <label for="R1DC"> </label>&nbsp
-<input type="text" id="R1SN" name="R1SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="R1SN" name="R1SN" value="" size="14%" placeholder="DC">
 <label for="R1SN"> </label>&nbsp
-<input type="checkbox" id=pic21" name="pic21" value="pic21"></div>
+<input type="checkbox" id=pic21" name="pic21" value="pic21">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Secondary Regulator #1</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="SR1DC" name="SR1DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="SR1DC" name="SR1DC" value="" size="22%" placeholder="S/N">
 <label for="SR1DC"> </label>&nbsp
-<input type="text" id="SR1SN" name="SR1SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="SR1SN" name="SR1SN" value="" size="14%" placeholder="DC">
 <label for="SR1SN"> </label>&nbsp
-<input type="checkbox" id=pic22" name="pic22" value="pic22"></div>
+<input type="checkbox" id=pic22" name="pic22" value="pic22">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Secondary Regulator #2</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="SR2DC" name="SR2DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="SR2DC" name="SR2DC" value="" size="22%" placeholder="S/N">
 <label for="SR2DC"> </label>&nbsp
-<input type="text" id="SR2SN" name="SR2SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="SR2SN" name="SR2SN" value="" size="14%" placeholder="DC">
 <label for="SR2SN"> </label>&nbsp
-<input type="checkbox" id=pic23" name="pic23" value="pic23"></div>
+<input type="checkbox" id=pic23" name="pic23" value="pic23">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Fenwall #1</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="F1DC" name="F1DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="F1DC" name="F1DC" value="" size="22%" placeholder="S/N">
 <label for="F1DC"> </label>&nbsp
-<input type="text" id="F1SN" name="F1SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="F1SN" name="F1SN" value="" size="14%" placeholder="DC">
 <label for="F1SN"> </label>&nbsp
-<input type="checkbox" id=pic24" name="pic24" value="pic24"></div>
+<input type="checkbox" id=pic24" name="pic24" value="pic24">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Fenwall #2</div>
 <div style="margin-left: 37%"> 
-<input type="text" id="F2DC" name="F2DC" value="" size="22%" placeholder="Serial Number">
+<input type="text" id="F2DC" name="F2DC" value="" size="22%" placeholder="S/N">
 <label for="F2DC"> </label>&nbsp
-<input type="text" id="F2SN" name="F2SN" value="" size="14%" placeholder="Date Code">
+<input type="text" id="F2SN" name="F2SN" value="" size="14%" placeholder="DC">
 <label for="F2SN"> </label>&nbsp
-<input type="checkbox" id=pic25" name="pic25" value="pic25"></div>
+<input type="checkbox" id=pic25" name="pic25" value="pic25">&nbspPhoto</div>
  
 
 
