--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
 <br>
 -->
  
-<br>
+
 <div style="float:left"> &nbsp Infeed Rotary Switch</div>
 <div style="margin-left: 37%"> 
 <input type="text" id="IRSDC" name="IRSDC" value="" size="22%" placeholder="S/N">
@@ -1243,7 +1243,7 @@
 <label for="DMDC"> </label>&nbsp
 <input type="text" id="DMSN" name="DMSN" value="" size="14%" placeholder="DC">
 <label for="DMSN"> </label>&nbsp
-<input type="checkbox" id=pic10" name="pic10" value="pic10">&nbsp</div>
+<input type="checkbox" id=pic10" name="pic10" value="pic10">&nbspPhoto</div>
  
 <div style="float:left">&nbsp Discharge Gearbox</div>
 <div style="margin-left: 37%"> 
