--- a/index.html
+++ b/index.html
@@ -1594,23 +1594,23 @@ resize: vertical;
  }
 	
 .button-cookie{
-     width: 100%;
-     position:relative;
+     width: 100%; !important
+     position:relative; !important
  }
 
 .button-cookie:after{
-    content:  attr(value);
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;    
-    width: 100%;
-    background: rgba(21,84,131,1);
-    color: white;
-    border-radius: 2px;
-    text-align: center;
-    font-size: 12px;
-    line-height: 2;
+    content:  attr(value); !important
+    position: absolute; !important
+    top: 0; !important
+    left: 0; !important
+    bottom: 0;    !important
+    width: 100%; !important
+    background: rgba(21,84,131,1); !important
+    color: white; !important
+    border-radius: 2px; !important
+    text-align: center; !important
+    font-size: 12px; !important
+    line-height: 2; !important
  }
 /*
 .button{
