--- a/index.html
+++ b/index.html
@@ -1605,7 +1605,7 @@ resize: vertical;
     left: 0; !important
     bottom: 0;    !important
     width: 100%; !important
-    background: rgba(21,84,131,1); !important
+    background-color: rgba(21,84,131,1); !important
     color: white; !important
     border-radius: 2px; !important
     text-align: center; !important
