--- a/index.html
+++ b/index.html
@@ -1530,16 +1530,13 @@ function img_pathUrlh(input){
   border-radius:2px;
   display: inline;
 }
-</style>
 
-<style>
-textarea
-{
+textarea {
 width:97%;
 }
-</style>
 
-<style>
+
+
 hr {
  height:4px;
  color:#000000;
@@ -1563,7 +1560,6 @@ body {
  font: normal 90% Calibri, Candara, Segoe;
 }
 
-
 p {
  font-size: 100%
 }
@@ -1571,7 +1567,6 @@ p {
 textarea{
 resize: vertical;
 }
-
 
 .btn-file-upload{
      width: 100%;
@@ -1592,7 +1587,20 @@ resize: vertical;
     font-size: 12px;
     line-height: 2;
  }
-
+.button {
+  border: 0;
+  border-radius: 2px;
+  background:rgba(21,84,131,1);
+  color: white;
+  font-family: Calibri, Candara, Segoe;
+  font-size: 12px;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem;
+  cursor: pointer;
+}
 /*
 .button{
   background-color: rgba(21,84,131,1);
@@ -1605,13 +1613,11 @@ resize: vertical;
   display: inline-block;
   font-size: 12px;
   border: 0px;
-
 }
 
 .button1 {border-radius: 2px;}
 */	
 </style>
-
 
 <script>
 function retrieveCookie( cookieName ) {
