--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,7 @@ resize: vertical;
     font-size: 12px;
     line-height: 2;
  }
-.button {
+.button-cookie {
   border: 0;
   border-radius: 2px;
   background:rgba(21,84,131,1);
