--- a/index.html
+++ b/index.html
@@ -1598,7 +1598,7 @@ resize: vertical;
   white-space: nowrap;
   text-decoration: none;
   padding: 0.25rem 0.5rem;
-  margin: 0.25rem;
+  margin: 0;
   cursor: pointer;
 }
 /*
