--- a/index.html
+++ b/index.html
@@ -1592,12 +1592,12 @@ resize: vertical;
   border-radius: 2px;
   background:rgba(21,84,131,1);
   color: white;
-  font-family: Calibri, Candara, Segoe;
+  /*font-family: Calibri, Candara, Segoe;*/
   font-size: 12px;
   line-height: 1.2;
   white-space: nowrap;
   text-decoration: none;
-  padding: 0.25rem 0.5rem;
+  padding: 5px 10px;
   margin: 0;
   cursor: pointer;
 }
