--- a/index.html
+++ b/index.html
@@ -1587,6 +1587,13 @@ resize: vertical;
     font-size: 12px;
     line-height: 2;
  }
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+	
 .button-cookie {
   border: 0;
   border-radius: 2px;
