--- a/index.html
+++ b/index.html
@@ -1581,6 +1581,7 @@ resize: vertical;
     left: 0;
     bottom: 0;    
     width: 100%;
+    height: 110%
     background: rgba(21,84,131,1);
     color: white;
     border-radius: 2px;
