--- a/index.html
+++ b/index.html
@@ -1587,6 +1587,7 @@ resize: vertical;
     text-align: center;
     font-size: 12px;
     line-height: 2;
+    cursor: pointer;
  }
 button,
 [type="button"],
