--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <div style="margin-left: 37%"> 
 <input type="checkbox" id="yeswai4" name="yeswai4" value="yeswai4">
 <label for="yeswai4"> Yes</label>&nbsp&nbsp
-<input type="checkbox" id="Nowai4" name="nowai4" value="nowai4">
+<input type="checkbox" id="nowai4" name="nowai4" value="nowai4">
 <label for="nowai4"> No</label>&nbsp
 <input type="text" id="rtdwellstapedcom" name="rtdwellstapedcom" value="" size="40%">
 <label for="rtdwellstapedcom"> </label></div>
@@ -480,7 +480,7 @@
 
 <div style="float:left"> Home Screen: </div>
 <div style="margin-left: 37%"> 
-<input type="checkbox" id="Presenthsv1" name="presenthsv1" value="presenthsv1">
+<input type="checkbox" id="presenthsv1" name="presenthsv1" value="presenthsv1">
 <label for="presenthsv1"> Present</label>&nbsp&nbsp</div>
 
 <div style="float:left"> Control: </div>
@@ -505,7 +505,7 @@
 
 <div style="float:left"> Mid Grain Trending: </div>
 <div style="margin-left: 37%"> 
-<input type="checkbox" id="Presenthsv6" name="presenthsv6" value="presenthsv6">
+<input type="checkbox" id="presenthsv6" name="presenthsv6" value="presenthsv6">
 <label for="presenthsv6"> Present</label>&nbsp&nbsp</div>
 
 <div style="float:left"> More Trending Data: </div>
@@ -536,7 +536,7 @@
 <div style="float:left"> PLC Modules: </div>
 <div style="margin-left: 37%"> 
 <input type="checkbox" id="presenthsv12" name="presenthsv12" value="presenthsv12">
-<label for="Present"> Present</label>&nbsp&nbsp</div>
+<label for="presenthsv12"> Present</label>&nbsp&nbsp</div>
 
 <div style="float:left"> Historical Data Screen: </div>
 <div style="margin-left: 37%"> 
@@ -758,7 +758,7 @@
 <div style="float:left"> Discharge Auger Direction: </div>
 <div style="margin-left: 37%"> 
 <input type="checkbox" id="passdt2" name="passdt2" value="passdt2">
-<label for="passdt3"> Pass</label>&nbsp&nbsp
+<label for="passdt2"> Pass</label>&nbsp&nbsp
 <input type="checkbox" id="faildt2" name="faildt2" value="faildt2">
 <label for="faildt2"> Fail</label>&nbsp&nbsp</div>
  
