--- a/index.html
+++ b/index.html
@@ -1616,6 +1616,8 @@ input[type="checkbox"]+span { font: 16pt sans-serif; color: #000; }
 input[type="checkbox"]+span:before { font: 16pt FontAwesome; content: '\00f096'; display: inline-block; width: 16pt; padding: 2px 0 0 3px; margin-right: 0.5em; }
 input[type="checkbox"]:checked+span:before { content: '\00f046'; }
 input[type="checkbox"]:focus+span:before { outline: 1px dotted #aaa; }
+	input[type="checkbox"]:disabled+span { color: #999; }
+input[type="checkbox"]:not(:disabled)+span:hover:before { text-shadow: 0 1px 2px #77F; }
 /*
 .button{
   background-color: rgba(21,84,131,1);
