--- a/index.html
+++ b/index.html
@@ -1612,12 +1612,11 @@ button,
 }
 	
 input[type="checkbox"] { position: absolute; opacity: 0; z-index: -1; }
-input[type="checkbox"]+span { font: 16pt sans-serif; color: #000; }
-input[type="checkbox"]+span:before { font: 16pt FontAwesome; content: '\00f096'; display: inline-block; width: 16pt; padding: 2px 0 0 3px; margin-right: 0.5em; }
-input[type="checkbox"]:checked+span:before { content: '\00f046'; }
-input[type="checkbox"]:focus+span:before { outline: 1px dotted #aaa; }
-	input[type="checkbox"]:disabled+span { color: #999; }
-input[type="checkbox"]:not(:disabled)+span:hover:before { text-shadow: 0 1px 2px #77F; }
+input[type="checkbox"]{ font: 16pt sans-serif; color: #000; }
+input[type="checkbox"]:before { font: 16pt FontAwesome; content: '\00f096'; display: inline-block; width: 16pt; padding: 2px 0 0 3px; margin-right: 0.5em; }
+input[type="checkbox"]:checked:before { content: '\00f046'; }
+input[type="checkbox"]:focus:before { outline: 1px dotted #aaa; }
+	
 /*
 .button{
   background-color: rgba(21,84,131,1);
