--- a/index.html
+++ b/index.html
@@ -1632,8 +1632,8 @@ input[type=checkbox]
 
 input[type=checkbox]:checked
 {
-    background-color: #409fd6;
-    background: #409fd6 url("data:image/gif;base64,R0lGODlhCwAKAIABAP////3cnSH5BAEKAAEALAAAAAALAAoAAAIUjH+AC73WHIsw0UCjglraO20PNhYAOw==") 3px 3px no-repeat;
+    background-color: rgba(21,84,131,1);
+    background: rgba(21,84,131,1) url("data:image/gif;base64,R0lGODlhCwAKAIABAP////3cnSH5BAEKAAEALAAAAAALAAoAAAIUjH+AC73WHIsw0UCjglraO20PNhYAOw==") 3px 3px no-repeat;
 }
 		
 </style>
