--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <!-- text document -->
 <html>
-<body>
+<body style="background-color:black;">
 
 <!--<center><img src="C:\Users\joelc\Pictures\header.png" alt="header" style="width:94%;"></center>-->
 <center><img src="https://user-images.githubusercontent.com/85181898/120836394-2336ed80-c52b-11eb-9bac-33c59cea5fb8.png" alt="header" style="width:94%;"></center>
