--- a/index.html
+++ b/index.html
@@ -1439,6 +1439,15 @@
 </form>
 <script>
 .click(img_pathUrl(){$(this).remove();});
+.click(img_pathUrla(){$(this).remove();});
+.click(img_pathUrlb(){$(this).remove();});
+.click(img_pathUrlc(){$(this).remove();});
+.click(img_pathUrld(){$(this).remove();});
+.click(img_pathUrle(){$(this).remove();});
+.click(img_pathUrlf(){$(this).remove();});
+.click(img_pathUrlg(){$(this).remove();});
+.click(img_pathUrlh(){$(this).remove();});
+	
 function img_pathUrl(input){
         $('#img_url')[0].src = (window.URL ? URL : webkitURL).createObjectURL(input.files[0]);
     }
