--- a/index.html
+++ b/index.html
@@ -1434,9 +1434,30 @@
 </center>
 
 <br>
+<input type="button" value="savetofile" onclick="WriteToFile">
 	
 </div>
 </form>
+	
+<script>
+import java.io.FileWriter;   // Import the FileWriter class
+import java.io.IOException;  // Import the IOException class to handle errors
+
+public class WriteToFile {
+  public static void main(String[] args) {
+    try {
+      FileWriter myWriter = new FileWriter("filename.txt");
+      myWriter.write("Files in Java might be tricky, but it is fun enough!");
+      myWriter.close();
+      System.out.println("Successfully wrote to the file.");
+    } catch (IOException e) {
+      System.out.println("An error occurred.");
+      e.printStackTrace();
+    }
+  }
+}	
+</script>	
+	
 <script>
 
 function img_pathUrl(input){
