--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
 </center>
 
 <br>
-<input type="button" value="savetofile" onclick="saveAs()">
+<input type="button" value="savetofiles" onclick="saveAs()">
 	
 </div>
 </form>
