--- a/index.html
+++ b/index.html
@@ -1440,8 +1440,20 @@
 </form>
 
 <script>
-var blob = new Blob(['formdata'], {type: "text/plain;charset=utf-8"});
-saveAs(blob, "document.getElementById('serialnumber').txt");
+save: function(filename, data) {
+    var blob = new Blob([data], {type: 'text/csv'});
+    if(window.navigator.msSaveOrOpenBlob) {
+        window.navigator.msSaveBlob(blob, filename);
+    }
+    else{
+        var elem = window.document.createElement('a');
+        elem.href = window.URL.createObjectURL(blob);
+        elem.download = filename;        
+        document.body.appendChild(elem);
+        elem.click();        
+        document.body.removeChild(elem);
+    }
+}
 </script>
 	
 <script>
