--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,9 @@
 </form>
 
 <script>
-save: function(filename, data) {
+var filename="serialnumberssd";
+var data="hello hello hihih";
+saveAs(filename, data) {
     var blob = new Blob([data], {type: 'text/csv'});
     if(window.navigator.msSaveOrOpenBlob) {
         window.navigator.msSaveBlob(blob, filename);
