--- a/index.html
+++ b/index.html
@@ -1440,8 +1440,8 @@
 </form>
 
 <script>
-var filename="serialnumberssd";
-var data="hello hello hihih";
+/*var filename="serialnumberssd";
+var data="hello hello hihih";*/
 function saveAs(filename, data) {
     var blob = new Blob([data], {type: 'text/csv'});
     if(window.navigator.msSaveOrOpenBlob) {
