--- a/index.html
+++ b/index.html
@@ -1455,7 +1455,7 @@
     }
 
     $(function () {
-        var str = "hi,file";
+        var str = 'formdata';
         createDownloadLink("#export",str,"file.txt");
     });
 
