--- a/index.html
+++ b/index.html
@@ -1455,7 +1455,7 @@
     }
 
     $(function () {
-        var str = "hi cookie cookie";
+        var str = "hi cookie cookie,file";
         createDownloadLink("#export",str,"file.txt");
     });
 
