--- a/index.html
+++ b/index.html
@@ -1455,7 +1455,7 @@
     }
 
     $(function () {
-        var str = "hicookiecookie,file";
+        var str = "hi,file";
         createDownloadLink("#export",str,"file.txt");
     });
 
