--- a/index.html
+++ b/index.html
@@ -1455,8 +1455,8 @@
     }
 
     $(function () {
-        var str = "hi,file";
-        createDownloadLink("#export",str,"file.txt");
+        var str = "hithecookieishere";
+        createDownloadLink("#export",str,"serialnumberdryerhi.txt");
     });
 
 </script>
