--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@
 	
 </div>
 </form>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
     function createDownloadLink(anchorSelector, str, fileName){
         if(window.navigator.msSaveOrOpenBlob) {
