--- a/index.html
+++ b/index.html
@@ -1434,10 +1434,33 @@
 </center>
 
 <br>
-<a id="export" class="myButton" download="" href="#">export</a>
+<!--<a id="export" class="myButton" download="" href="#">export</a>-->
 	
 </div>
 </form>
+	
+<form onsubmit="download(this['name'].value, this['text'].value)">
+  <input type="text" name="name" value="test.txt">
+  <textarea name="text"></textarea>
+  <input type="submit" value="Download">
+</form>
+	
+<script>
+function download(filename, text) {
+  var element = document.createElement('a');
+  element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+  element.setAttribute('download', filename);
+
+  element.style.display = 'none';
+  document.body.appendChild(element);
+
+  element.click();
+
+  document.body.removeChild(element);
+}
+	
+</script>
+<!--
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>
     function createDownloadLink(anchorSelector, str, fileName){
@@ -1460,7 +1483,7 @@
     });
 
 </script>
-	
+-->	
 <script>
 
 function img_pathUrl(input){
