--- a/index.html
+++ b/index.html
@@ -1441,8 +1441,9 @@
   <input type="text" name="name" value="test.txt">
   <input type="text" name="text" value="showCookies()">
   <input type="submit" value="Download">
-	<button onclick="showCookies()">Show cookies</button>
-</form>
+</form
+	
+<button onclick="showCookies()">Show cookies</button>
 	
 <script>
 function showCookies() {
