--- a/index.html
+++ b/index.html
@@ -1447,11 +1447,11 @@
 <button onclick="showCookies()">Show cookies</button>
 </form>	
 	
-<code id="cookies"></code>
+<code id="formdata"></code>
 	
 <script>
 function showCookies() {
-  const output = document.getElementById('cookies')
+  const output = document.getElementById('formdata')
   output.textContent =document.cookie
 }	
 	
