--- a/index.html
+++ b/index.html
@@ -1437,9 +1437,9 @@
 </div>
 </form>
 	
-<form onsubmit="download(this['name'].value,this['formdata'].value)">
+<form onsubmit="download(this['name'].value,this['text'].value)">
   <input type="text" name="name" value="test.txt">
-  <!--<input type="text" name="text" value="showCookies()">-->
+  <input type="text" name="text" value="showCookies()">
   <input type="submit" value="Download">
 </form>
 	
