--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
 	
 <form onsubmit="download(this['name'].value,this['text'].value)">
   <input type="text" name="name" value="test.txt">
-  <input type="text" name="text" id="textid">
+  <input type="text" name="text" id="text">
   <input type="submit" value="Download">
 </form>
 	
