--- a/index.html
+++ b/index.html
@@ -1444,7 +1444,7 @@
 </form>
 	
 <script>
-$("#text")[0].value = 123;	
+$("#text")[0].value =document.cookie;	
 	
 function download(filename, text) {
   var element = document.createElement('a');
