--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@
 	
 <script>
 var inputs = document.getElementById("checklistform").elements;
-var serialnumberstring = inputs["serialnumber'];
+var serialnumberstring = inputs["serialnumber"];
 var dottext = ".txt";
 	
 $("#text")[0].value =document.cookie;
