--- a/index.html
+++ b/index.html
@@ -1449,7 +1449,7 @@ var serialnumberstring = inputs["serialnumber"];
 
 	
 $("#text")[0].value =document.cookie;
-$("#name")[0].value ='' + inputs["serialnumber"] +'.txt.;
+$("#name")[0].value ='' + inputs["serialnumber"] +'.txt.';
 	
 function download(filename, text) {
   var element = document.createElement('a');
