--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p><label for="date">Date:</label>
 <input type="date" id="date" name="date" size="20%"></p>
 <p><label for="serialnumber">Serial Number: </label>
-<input type="text" id="serialnumber" name="serialnumber" maxlength="7" size="13%" placeholder="2021###"></p>
+<input type="text" id="serialnumbers" name="serialnumber" maxlength="7" size="13%" placeholder="2021###"></p>
 <p><label for=:modelnumber">Model Number:</label>
 <input type="text" id="modelnumber" name="modelnumber" size="12%" placeholder="E###"></p>
 <p><label for="dealer">Dealer:</label>
