--- a/index.html
+++ b/index.html
@@ -1436,11 +1436,14 @@
 	
 </div>
 </form>
-	
+
+
 <form onsubmit="download(this['name'].value,this['text'].value)">
   <input type="text" name="name" id="name">
   <input type="text" name="text" id="text">
   <input type="submit" value="Download">
+
+	<input type="button" onclick="download($("#text")[0].value =document.cookie,$("#name")[0].value =inputs["serialnumberdryer"].value)"
 </form>
 	
 <script>
